--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,97 +1,4 @@
-img {
-    max-width: 100%;
-    max-height: 100%;
-}
-
-.slogan {
-    justify-content: center;
-    text-align: center;
-}
-
-.post-unit {
-    border-bottom: 1px solid #ccc;
-    padding-bottom: 10px;
-    margin-bottom: 20px;
-}
-
-.post-unit:last-child {
-    border-bottom: none;
-}
-
-.main-content {
-    margin-top: 30px;
-}
-
-.ticket-price ul {
-    list-style: none;
-    padding-left: 5px;
-}
-
-.ticket-type-img img {
-    border: none;
-}
-
-footer {
-    margin-top: 20px;
-    padding-top: 20px;
-    background: #ccc;
-}
-
-.login-logo {
-    margin-top: 30px;
-}
-
-.login-logo img {
-    border: none;
-}
-
-.dashboard-logo img {
-    border: none;
-}
-
-.dashboard-nav {
-    padding-top: 10px;
-}
-
-.dashboard-card {
-    color: #fff;
-    padding: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-}
-
-.dashboard-card a {
-    font-weight: bold;
-    font-size: 25px;
-    color: #fff;
-}
-
-.bg-red {
-    background: #DD4B38;
-}
-
-.bg-blue {
-    background: #00C0EE;
-}
-
-.bg-green {
-    background: #03A55A;
-}
-
-.bg-yellow {
-    background: #F39C11;
-}
-
-label .error {
-    color: #DD4B38;
-    display: inline;
-}
-
-.carousel-header-img {
-    height: 145px;
+label.error {
+    color: #ff0000;
     display: block;
-}
-
-.carousel-header-img > img {
-    margin: auto;
 }
